# CoxIterWeb

./: .gitmodules  README.md  index.html  index.php
config/: config.php
cpp/: CMakeLists.txt  app.cpp  app.h  config.h  main.cpp
resources/: .computeInvariants.php.swp  app.js  computeInvariants.php  main.css  popup.css
style/: style.css
